--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app"
   },
   "dependencies": {
     "body-parser": "~1.16.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
+    "dotenv": "^5.0.0",
     "ejs": "~2.5.5",
     "express": "~4.14.1",
     "express-session": "^1.15.6",
     "formidable": "^1.1.1",
+    "image-to-ascii": "^3.0.11",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.2"
   }
